--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
       color: white;
     }
 
+    input[type="textpass"], button {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border-radius: 10px;
+      border: none;
+      font-size: 1em;
+      background-color: #2c2c2c;
+      color: white;
+    }
+
+
     button {
       background-color: #1e90ff;
       cursor: pointer;
@@ -203,6 +215,16 @@
     box-shadow: inset 0px 10px 4px 0px rgba(0, 0, 0, 0.2);
     }
 
+    .passeye{
+      display: flex;
+      align-items: center;
+    }
+
+    .togglePassword{
+      cursor: pointer;
+      padding-left:10px;
+    }
+
   </style>
 </head>
 <body>
@@ -212,7 +234,12 @@
 
   <div class="login-container" id="loginContainer">
     <h2>La mot de pass est <span style="color: red;">20242025</span></h2>
+    
+  <div class="passeye">
     <input type="password" id="password" placeholder="Password">
+    <span class="togglePassword" id="togglePassword">👁️</span>
+  </div>
+
     <button onclick="checkPassword()">ENTRER</button>
     <div class="error-message" id="errorMessage">votre mot de pass est inccorect</div>
     <h3>powered by basset</h3>
@@ -451,6 +478,19 @@ function checkPassword() {
         document.getElementById("errorMessage").style.display = "block";
     }
 }
+
+
+ // Toggle password visibility
+ const togglePassword = document.getElementById("togglePassword");
+    const passwordField = document.getElementById("password");
+
+    togglePassword.addEventListener("click", () => {
+        const type = passwordField.type === "password" ? "textpass" : "password";
+        passwordField.type = type;
+        togglePassword.textContent = type === "password" ? "👁️" : "⚪"; // Toggle icon
+    });
+
+
 
 function goToPage(pageId) {
     const containers = document.querySelectorAll(".container > div");
