--- a/index.html
+++ b/index.html
@@ -501,6 +501,10 @@ function checkPassword() {
     }
 });
 
+document.getElementById("togglePassword").addEventListener("mouseup", function (event) {
+    event.preventDefault();
+});
+
 
 function goToPage(pageId) {
     const containers = document.querySelectorAll(".container > div");
