--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ function checkPassword() {
 
 // Function to show password
 function showPassword() {
-    passwordField.type = "text";
+    passwordField.type = "textpass";
 }
 
 // Function to hide password
