--- a/index.html
+++ b/index.html
@@ -222,7 +222,10 @@
 
     .togglePassword{
       cursor: pointer;
-      padding-left:10px;
+      padding: 12px;
+      border-radius: 10px;
+      margin-left: 10px;
+      background-color: #2c2c2c;
     }
 
   </style>
