--- a/index.html
+++ b/index.html
@@ -16,6 +16,28 @@
       font-family: "Dela Gothic One", sans-serif;
     }
 
+    /* General Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Scrollbar Track */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  border-radius: 10px;
+}
+
+/* Scrollbar Thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+}
+
+/* Scrollbar Thumb on Hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
     body {
       display: flex;
       justify-content: center;
