--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 /* Scrollbar Track */
 ::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
+  background-color: transparent;
   border-radius: 10px;
 }
 
