--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
 
 /* Scrollbar Thumb */
 ::-webkit-scrollbar-thumb {
-  background-color: #888;
+  background-color: #2c2c2c;
   border-radius: 10px;
 }
 
 /* Scrollbar Thumb on Hover */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
+  background-color: #333;
+  cursor: pointer;
 }
 
     body {
@@ -479,7 +480,7 @@
 
 </div>
 <script>
-/*document.addEventListener('contextmenu', function(event) {
+document.addEventListener('contextmenu', function(event) {
     event.preventDefault();
 });
 
@@ -489,7 +490,7 @@ document.addEventListener('keydown', function(event) {
         (event.ctrlKey && event.key === 'U')) {
         event.preventDefault();
     }
-});*/
+});
 
 const correctPassword = "20242025";
 
