--- a/index.html
+++ b/index.html
@@ -324,9 +324,9 @@
         <a href="https://drive.google.com/file/d/11pjGVtbwzT6gzkg6u8_dctkTfTr0CRxd/view?usp=drive_link" target="_blank">TD3</a>
         <a href="https://drive.google.com/file/d/123ya7kXS1aLQK9lfNgo8ZdOz44Gug2px/view?usp=drive_link" target="_blank">SO3</a>  
 
-    <a href="https://drive.google.com/file" target="_blank">CH4</a>
-        <a href="https://drive.google.com/file" target="_blank">X</a>
-        <a href="https://drive.google.com/file" target="_blank">X</a> 
+    <a href="https://drive.google.com/file" target="_blank">X</a>
+        <a href="https://drive.google.com/file/d/19QEazVG4bNAOWBYk8q5N9dWjRzz0tGKN/view?usp=drivesdk" target="_blank">TD4</a>
+        <a href="https://drive.google.com/file/d/19Qa2ETtccN16XJmlNBqkQE0l4MPHXRzZ/view?usp=drivesdk" target="_blank">SO4</a> 
         </div>
 
   </div>
