--- a/index.html
+++ b/index.html
@@ -397,7 +397,8 @@
         <a href="https://drive.google.com/file/d/1ziaEfGPHB13VKlVGf26dbaTksHvWcTJE/view?usp=drive_link" target="_blank">CH1</a>
       </div>
       <div class="con">
-        <a href="https://drive.google.com/file" target="_blank">TP1</a>
+        <a href="https://drive.google.com/file/d/1GRDyAd4M7rbPHBYmIGcsK4-AIhzMrp2P/view?usp=drive_link" target="_blank">TP1</a>
+        <a href="https://drive.google.com/file/d/1-CyTbERzS6CTxHqV5pT0iB34HNQn3OZc/view?usp=drive_link" target="_blank">TP2</a>
       </div>
     </div>
     </div>
