--- a/index.html
+++ b/index.html
@@ -387,6 +387,15 @@
         <a href="https://drive.google.com/file/d/1AHpJDcJ0mQC07O4Vg7U-oxmopT42Td_i/view?usp=drive_link" target="_blank">CH3.4</a>
         <a href="https://drive.google.com/file/d/1XN6w6rSyOtL9rZl3PvUEeK3xqYhmy90O/view?usp=drivesdk" target="_blank">CH5</a>
       </div>
+
+         <div class="con">
+        <a href="https://drive.google.com/file/d/19bz78j1XQOCjvFAZOESc85mDOVeYTXpx/view?usp=drive_link" target="_blank">TP1</a>
+        <a href="https://drive.google.com/file/d/19fOLQf8WuaauXyvbTX9cs1Xf4G4CMMqk/view?usp=drive_link" target="_blank">TP2</a>
+        <a href="https://drive.google.com/file/d/19fzobff708AxB8YbkSQ-mAgL52Hxw37b/view?usp=drive_link" target="_blank">TP3</a>
+        <a href="https://drive.google.com/file/d/19hDEGLS_r4p7QO7hMySnFk-ph0X_q6Ug/view?usp=drive_link" target="_blank">TP4</a>
+        <a href="https://drive.google.com/file/d/19m465FrOCom0a0q3aGJEoh-xw8_0WN68/view?usp=drive_link" target="_blank">TP5</a>
+      </div>
+        
     </div>
   </div>
 
