--- a/index.html
+++ b/index.html
@@ -376,12 +376,14 @@
         <a href="https://drive.google.com/file/d/10bPhrjhjLfcaDnOpaz7opW1p21YgWkUx/view?usp=drive_link" target="_blank">TD4</a>
         <a href="https://drive.google.com/file" target="_blank">X</a>
       </div>
+
+      <div class="model">
                 <div class="con">
         <a href="https://drive.google.com/file/d/1A0kuhYmzJrkaLIDyVi3IHk0g59vq3DoO/view?usp=drive_link" target="_blank">TP1</a>
         <a href="https://drive.google.com/file" target="_blank">NaN</a>
         <a href="https://drive.google.com/file" target="_blank">NaN</a>
       </div>
-      
+      </div>
 
     </div>
   </div>
@@ -397,6 +399,7 @@
         <a href="https://drive.google.com/file/d/1XN6w6rSyOtL9rZl3PvUEeK3xqYhmy90O/view?usp=drivesdk" target="_blank">CH5</a>
       </div>
 
+      <div class="model">
          <div class="con">
         <a href="https://drive.google.com/file/d/19bz78j1XQOCjvFAZOESc85mDOVeYTXpx/view?usp=drive_link" target="_blank">TP1</a>
         <a href="https://drive.google.com/file/d/19fOLQf8WuaauXyvbTX9cs1Xf4G4CMMqk/view?usp=drive_link" target="_blank">TP2</a>
@@ -404,6 +407,7 @@
         <a href="https://drive.google.com/file/d/19hDEGLS_r4p7QO7hMySnFk-ph0X_q6Ug/view?usp=drive_link" target="_blank">TP4</a>
         <a href="https://drive.google.com/file/d/19m465FrOCom0a0q3aGJEoh-xw8_0WN68/view?usp=drive_link" target="_blank">TP5</a>
       </div>
+    </div>
         
     </div>
   </div>
@@ -414,10 +418,13 @@
         <div class="con">
         <a href="https://drive.google.com/file/d/1ziaEfGPHB13VKlVGf26dbaTksHvWcTJE/view?usp=drive_link" target="_blank">CH1</a>
       </div>
+
+      <div class="model">
       <div class="con">
         <a href="https://drive.google.com/file/d/1GRDyAd4M7rbPHBYmIGcsK4-AIhzMrp2P/view?usp=drive_link" target="_blank">TP1</a>
         <a href="https://drive.google.com/file/d/1-CyTbERzS6CTxHqV5pT0iB34HNQn3OZc/view?usp=drive_link" target="_blank">TP2</a>
       </div>
+    </div>
     </div>
     </div>
 
@@ -499,7 +506,7 @@
 
 </div>
 <script>
-document.addEventListener('contextmenu', function(event) {
+/*document.addEventListener('contextmenu', function(event) {
     event.preventDefault();
 });
 
@@ -509,7 +516,7 @@ document.addEventListener('keydown', function(event) {
         (event.ctrlKey && event.key === 'U')) {
         event.preventDefault();
     }
-});
+});*/
 
 const correctPassword = "20242025";
 
