--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 
 </div>
 <script>
-/*document.addEventListener('contextmenu', function(event) {
+document.addEventListener('contextmenu', function(event) {
     event.preventDefault();
 });
 
@@ -516,7 +516,7 @@ document.addEventListener('keydown', function(event) {
         (event.ctrlKey && event.key === 'U')) {
         event.preventDefault();
     }
-});*/
+});
 
 const correctPassword = "20242025";
 
