--- a/index.html
+++ b/index.html
@@ -153,6 +153,15 @@
       padding-right: 10px;
     }
 
+    .bord{
+      margin: 10px 0;
+      border: 1px solid #333;
+      border-radius: 10px;
+      background-color: #1e1e1e;
+      transition: all 0.3s ease;
+      /*padding-left: 10px;*/
+    }
+
     .model-title {
       padding: 10px;
       color: #ffffff;
@@ -211,6 +220,18 @@
 
     .myword:hover {
       background:  #fa886b;
+    }
+
+    .mynote {
+      background: transparent;
+      border: 1px solid red;
+      border-radius: 10px;
+      margin-bottom: 0;
+      margin-top: 0;
+    }
+
+    .mynote:hover {
+      background:  red;
     }
 
     .con{
@@ -377,13 +398,17 @@
         <a href="https://drive.google.com/file" target="_blank">X</a>
       </div>
 
-      <div class="model">
+      <div class="bord">
                 <div class="con">
         <a href="https://drive.google.com/file/d/1A0kuhYmzJrkaLIDyVi3IHk0g59vq3DoO/view?usp=drive_link" target="_blank">TP1</a>
         <a href="https://drive.google.com/file" target="_blank">NaN</a>
         <a href="https://drive.google.com/file" target="_blank">NaN</a>
       </div>
-      </div>
+    </div>
+        <button class="mynote"> <span style="color: red;">NOTE :</span><h4> Quant aux Tp2 et Tp3, je n'ai pas la copie car le prof ne nous l'a pas donné, mais le titre de</h4>
+          <h4>🔴 Tp2 : Essai pressiometrique </h4>
+          <h4>🔴 Tp3 : Essai de cisaillement direct "boite de casagrande" et indirect "triaxial" </h4>
+        </button>
 
     </div>
   </div>
@@ -399,7 +424,7 @@
         <a href="https://drive.google.com/file/d/1XN6w6rSyOtL9rZl3PvUEeK3xqYhmy90O/view?usp=drivesdk" target="_blank">CH5</a>
       </div>
 
-      <div class="model">
+      <div class="bord">
          <div class="con">
         <a href="https://drive.google.com/file/d/19bz78j1XQOCjvFAZOESc85mDOVeYTXpx/view?usp=drive_link" target="_blank">TP1</a>
         <a href="https://drive.google.com/file/d/19fOLQf8WuaauXyvbTX9cs1Xf4G4CMMqk/view?usp=drive_link" target="_blank">TP2</a>
@@ -419,7 +444,7 @@
         <a href="https://drive.google.com/file/d/1ziaEfGPHB13VKlVGf26dbaTksHvWcTJE/view?usp=drive_link" target="_blank">CH1</a>
       </div>
 
-      <div class="model">
+      <div class="bord">
       <div class="con">
         <a href="https://drive.google.com/file/d/1GRDyAd4M7rbPHBYmIGcsK4-AIhzMrp2P/view?usp=drive_link" target="_blank">TP1</a>
         <a href="https://drive.google.com/file/d/1-CyTbERzS6CTxHqV5pT0iB34HNQn3OZc/view?usp=drive_link" target="_blank">TP2</a>
