--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@
       margin-top: 0;
     }
 
+    .mynote:hover {
+      background:  transparent;
+    }
+
     .con{
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -527,7 +531,7 @@
 
 </div>
 <script>
-document.addEventListener('contextmenu', function(event) {
+/*document.addEventListener('contextmenu', function(event) {
     event.preventDefault();
 });
 
@@ -537,7 +541,7 @@ document.addEventListener('keydown', function(event) {
         (event.ctrlKey && event.key === 'U')) {
         event.preventDefault();
     }
-});
+});*/
 
 const correctPassword = "20242025";
 
