--- a/index.html
+++ b/index.html
@@ -470,8 +470,12 @@
         <a href="https://drive.google.com/file/d/1k1-mS1hSKBGO5Hv58iMF6upXluv2PZaF/view?usp=drive_link" target="_blank">CH2</a>
         <a href="https://drive.google.com/file/d/18E9Kw8yTj2NhXJ59F4O1tfsaCuRqMdsv/view?usp=drivesdk" target="_blank">CH3</a>
         <a href="https://drive.google.com/file/d/18iOs_02oGRGuLCf9enpXJfY756ZCfOIo/view?usp=drivesdk" target="_blank">CH4</a>
-        <a href="https://drive.google.com/file/d/183dbM_Rnuwv-ObsCa27maAaJcwlz6d1v/view?usp=drivesdk" target="_blank">DES</a>
       </div>
+
+      <div class="bord">
+        <div class="con">
+          <a href="https://drive.google.com/file/d/183dbM_Rnuwv-ObsCa27maAaJcwlz6d1v/view?usp=drivesdk" target="_blank">DES</a>
+        </div>
     </div>
   </div>
 
@@ -531,7 +535,7 @@
 
 </div>
 <script>
-/*document.addEventListener('contextmenu', function(event) {
+document.addEventListener('contextmenu', function(event) {
     event.preventDefault();
 });
 
@@ -541,7 +545,7 @@ document.addEventListener('keydown', function(event) {
         (event.ctrlKey && event.key === 'U')) {
         event.preventDefault();
     }
-});*/
+});
 
 const correctPassword = "20242025";
 
