--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
 
     .myword:hover {
       background:  #fa886b;
+      cursor: default;
     }
 
     .mynote {
@@ -232,6 +233,7 @@
 
     .mynote:hover {
       background:  transparent;
+      cursor: default;
     }
 
     .con{
