--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
 
     .myword:hover {
       background:  #fa886b;
+      cursor: default;
     }
 
     .mynote {
@@ -538,7 +539,7 @@
 
 </div>
 <script>
-/*document.addEventListener('contextmenu', function(event) {
+document.addEventListener('contextmenu', function(event) {
     event.preventDefault();
 });
 
@@ -548,7 +549,7 @@ document.addEventListener('keydown', function(event) {
         (event.ctrlKey && event.key === 'U')) {
         event.preventDefault();
     }
-});*/
+});
 
 const correctPassword = "20242025";
 
