--- a/index.html
+++ b/index.html
@@ -374,6 +374,11 @@
         <a href="https://drive.google.com/file/d/15YW4A6xvdx_Dtn2yfa8LsGGcsrDZzQ8B/view?usp=drivesdk" target="_blank">TD4</a>
         <a href="https://drive.google.com/file" target="_blank">X</a>
       </div>
+              <div class="bord">
+        <div class="con">
+          <a href="https://drive.google.com/file/d/16gUmacezaPka0Znfo_RIjzrU0JLtWU3D/view?usp=drive_link" target="_blank">DOC</a>
+        </div>
+    </div>
     </div>
   </div>
 
