--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         <a href="https://drive.google.com/file" target="_blank">NaN</a>
       </div>
     </div>
-        <button class="mynote"> <span style="color: red;">NOTE :</span><h4> Quant aux Tp2 et Tp3, je n'ai pas la copie car le prof ne nous l'a pas donné, mais le titre de</h4>
+        <button class="mynote"> <span style="color: red;">NOTE :</span><h4> pour le Tp2 et Tp3, je n'ai pas la copie car le prof ne nous l'a pas donné, mais le titre de</h4>
           <h4>🔴 Tp2 : Essai pressiometrique </h4>
           <h4>🔴 Tp3 : Essai de cisaillement direct "boite de casagrande" et indirect "triaxial" </h4>
         </button>
