--- a/index.html
+++ b/index.html
@@ -533,6 +533,30 @@
     <button class="btn" onclick="returnToSelection()">RETOUR</button>
     <div class="model">
       <div class="model-title" onclick="togglePdfList('s2_pasencore')">Ce n'est pas encore !</div>
+
+
+<div class="model">
+      <div class="model-title" onclick="togglePdfList('hydro')">HYDRO <span>▼</span></div>
+
+      <div class="pdf-list" id="hydro" style="display: none;">
+
+       <div class="uploader">
+          <div class="bols">
+            <h5>uploaded by</h5>
+            <h5>🔴 @rahim </h5>
+
+          </div>
+        </div>
+
+
+        <div class="con">
+        <a href="https://drive.google.com/file/d/14JmdcH1BTF1RLQwnXMNEEbRMjcV3UHXs/view?usp=drivesdk" target="_blank">CH1</a>
+        <a href="https://drive.google.com/file/d/14OaffrjcExd9Rz9zKH9tmfBlMK4lE0NA/view?usp=drivesdk" target="_blank">CH2</a>
+        <a href="https://drive.google.com/file/d/17uNX4aEByMz16takDq0_TjG-L7mBJfQ1/view?usp=drivesdk" target="_blank">CH3</a>
+      </div>
+    </div>
+  </div>
+
       <div class="pdf-list" id="s2_pasencore" style="display: none;">
       </div>
     </div>
