--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>GC L3</title>
   <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://png.pngtree.com/png-vector/20241030/ourmid/pngtree-yellow-hard-hat-vector-png-image_14185637.png">
+  <img src="https://t.bkit.co/w_674b386a89b42.gif" />
   <style>
     * {
       margin: 0;
