--- a/index.html
+++ b/index.html
@@ -679,6 +679,16 @@ document.getElementById("password").addEventListener("keydown", function (event)
 window.onload = restorePageState;
 </script>
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EY5WKYP2W0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EY5WKYP2W0');
+</script>
+
   
 
 </body>
