--- a/index.html
+++ b/index.html
@@ -355,6 +355,12 @@
         <a href="https://drive.google.com/file/d/19Qa2ETtccN16XJmlNBqkQE0l4MPHXRzZ/view?usp=drivesdk" target="_blank">SO4</a> 
         </div>
 
+                      <div class="bord">
+        <div class="con">
+          <a href="https://drive.google.com/file/d/16gUmacezaPka0Znfo_RIjzrU0JLtWU3D/view?usp=drive_link" target="_blank">DOC</a>
+        </div>
+    </div>
+
   </div>
     </div>
 
