--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
                       <div class="bord">
         <div class="con">
-          <a href="https://drive.google.com/file/d/1BXMnWHLQiUrgdZguaB-ycMYnPiCZEuhr/view?usp=drivesdk">DOC</a>
+          <a href="https://drive.google.com/file/d/1BXMnWHLQiUrgdZguaB-ycMYnPiCZEuhr/view?usp=drivesdk" target="_blank">DOC</a>
         </div>
     </div>
 
