--- a/index.html
+++ b/index.html
@@ -456,6 +456,7 @@
       <div class="pdf-list" id="mdc" style="display: none;">
         <div class="con">
         <a href="https://drive.google.com/file/d/1ziaEfGPHB13VKlVGf26dbaTksHvWcTJE/view?usp=drive_link" target="_blank">CH1</a>
+        <a href="https://drive.google.com/file/d/1FfiDXAJcafyw8Tb0WVx9kEQcDvJrL4Ql/view?usp=drivesdk" target="_blank">CH2</a>
       </div>
 
       <div class="bord">
