--- a/index.html
+++ b/index.html
@@ -282,7 +282,19 @@
 <div class="container">
 
 
+  <div class="login-container" id="loginContainer">
+  
+    <h2>La mot de pass est <span style="color: red;">20242025</span></h2>
+    
+  <div class="passeye">
+    <input type="password" id="password" placeholder="Password">
+    <span class="togglePassword" id="togglePassword">👁️</span>
+  </div>
 
+    <button onclick="checkPassword()">ENTRER</button>
+    <div class="error-message" id="errorMessage">votre mot de pass est inccorect</div>
+    <h3>powered by basset</h3>
+  </div>
 
   <div class="selection-container" id="selectionContainer" style="display: none;">
     <h2>Choisez le semestre</h2>
