--- a/index.html
+++ b/index.html
@@ -329,9 +329,9 @@
         <a href="https://drive.google.com/file/d/1OFHhoZIrc_bdtMv90qiRcP0VZAKHAngG/view?usp=drive_link" target="_blank">CH2</a>
         <a href="https://drive.google.com/file/d/12bPPTla7knADpZe4n-H7_lwpyyrb_cJh/view?usp=drive_link" target="_blank">TD2</a>
         <a href="https://drive.google.com/file/d/14weCd8v3iUT8PovGh4UeYcacVYljNEzL/view?usp=drivesdk" target="_blank">SO2</a>
-        <a href="https://drive.google.com/file" target="_blank">X</a>
+        <a href="https://drive.google.com/file/d/1KQvlWRaCSnVM2ehQEtWs8tmRAlLkytSL/view?usp=drivesdk" target="_blank">CH3</a>
         <a href="https://drive.google.com/file/d/1GvlCdm3-IhayFL9lJWwthzrV55JS1Xb2/view?usp=drivesdk" target="_blank">TD3</a>
-        <a href="https://drive.google.com/file/d/1H-Dj7O7wxhI08F_aEIl0S-S71FK29Exg/view?usp=drivesdk" target="_blank">SO3</a>
+        <a href="https://drive.google.com/file/d/1KRWCMZcFS0DTrgIZYhqOLF6E1ljuC1EK/view?usp=drivesdk" target="_blank">SO3</a>
       </div>
     </div>
   </div>
