--- a/index.html
+++ b/index.html
@@ -334,6 +334,15 @@
         <a href="https://drive.google.com/file/d/1KRWCMZcFS0DTrgIZYhqOLF6E1ljuC1EK/view?usp=drivesdk" target="_blank">SO3</a>
       </div>
     </div>
+
+
+
+                    <div class="bord">
+        <div class="con">
+          <a href="https://drive.google.com/file/d/1BXMnWHLQiUrgdZguaB-ycMYnPiCZEuhr/view?usp=drivesdk" target="_blank">DOC</a>
+        </div>
+
+
   </div>
 
     <div class="model">
