--- a/index.html
+++ b/index.html
@@ -335,13 +335,12 @@
       </div>
     </div>
 
-
-
-                    <div class="bord">
+                                        
+             <div class="bord">
         <div class="con">
-          <a href="https://drive.google.com/file/d/1BXMnWHLQiUrgdZguaB-ycMYnPiCZEuhr/view?usp=drivesdk" target="_blank">DOC</a>
+          <a href="https://drive.google.com/file/d/1QkmRZr1DoTrVfc-lw5huAn9pdZ13FQnO/view?usp=drivesdk" target="_blank">DOC</a>
         </div>
-
+    </div>
 
   </div>
 
