--- a/index.html
+++ b/index.html
@@ -310,6 +310,14 @@
     <h2>Semestre 1</h2>
     <button class="btn" onclick="returnToSelection()">RETOUR</button>
 
+
+
+ <button class="myword">
+
+
+ </button>    
+
+
     <div class="model">
       <div class="model-title" onclick="togglePdfList('rdm')">RDM 2 <span>▼</span></div>
       <div class="pdf-list" id="rdm" style="display: none;">
