--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
     <h2>Choisez le semestre</h2>
     <div class="contents">
     <a href="#" class="btn" onclick="goToPage('contentS1')">S1</a>
-    <a href="#" class="btn" onclick="goToPage('contentS2')">S2</a>
+    <a href="#" class="btn" onclick="goToPage('contentS2')">X</a>
     </div>
     <h3>powered by basset</h3>
   </div>
